# Fit_Agent

./: .env  .gitignore  .~lock.FitAgent_Project_Documentation.docx#  Dockerfile  Makefile  README.md  compose.yml  cspell.json  pyproject.toml  requiremnets.txt
.github/workflows/: deploy.yml
data/: fitagent.db
mlruns/0/: meta.yaml
mlruns/181751465241724523/: meta.yaml
mlruns/181751465241724523/2b2ec4acefc64dcd8dbbf1c0f8116cd1/: meta.yaml
mlruns/181751465241724523/2b2ec4acefc64dcd8dbbf1c0f8116cd1/metrics/: calories  carbs_g  fat_g  latency_seconds  num_foods_detected  parse_error  protein_g
mlruns/181751465241724523/2b2ec4acefc64dcd8dbbf1c0f8116cd1/params/: meal_description
mlruns/181751465241724523/2b2ec4acefc64dcd8dbbf1c0f8116cd1/tags/: mlflow.runName
mlruns/181751465241724523/6377b0f78a61458880e33e0522394e5d/: meta.yaml
mlruns/181751465241724523/6377b0f78a61458880e33e0522394e5d/metrics/: calories  carbs_g  fat_g  latency_seconds  num_foods_detected  parse_error  protein_g
mlruns/181751465241724523/6377b0f78a61458880e33e0522394e5d/params/: image_path  (+1 more)
mlruns/181751465241724523/783ddbd00b504d08a4b100f9f1b37b8e/: meta.yaml
mlruns/181751465241724523/d5aa2b3d8dd64449a4d9e5f995eab0cd/: meta.yaml
scripts/: app.py  telegram_bot.py
src/: config.py
src/agent/: graph.py
src/database/: meal_db.py
src/fit_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: agent_tools.py  meal_analyzer.py
src/tracking/: data_monitor.py  metrics.py  mlflow_tracker.py
src/utils/: exception.py  logger.py
tests/: test_database.py
(+24 files in other folders)
